--- a/sass/global.pages.scss
+++ b/sass/global.pages.scss
@@ -115,6 +115,7 @@ body {}
   float: right;
   margin-right: 0.83em;
   margin-top: 0.6em;
+  color: #414042;
 }
 
 // Header region (add secondary links)
