--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -45,6 +45,9 @@
       color:#FFF;
     }
   }
+  li{
+    float: right;
+  }
   #current-department-link {
     float: left;
     background-color: #FFC344;
