--- a/css/fo.css
+++ b/css/fo.css
@@ -12,7 +12,11 @@
   color: #150517;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000312}}
-.at-panel .region.region-three-33-third {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000313}}
+#footer-panels-wrapper .region.region-three-33-first {
+  width: 66.6666%;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000316}}
+#footer-panels-wrapper .region.region-three-33-third {
   float: right;
 }
