--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -9,6 +9,11 @@
 	color: #150517;
 }
 
-.at-panel .region.region-three-33-third{
-	float:right;
+#footer-panels-wrapper{
+	.region.region-three-33-first{
+		width: 66.6666%;
+	}
+	.region.region-three-33-third{
+		float:right;
+	}
 }
