--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -9,7 +9,7 @@
 	color: #150517; 
 }
 
-.menu-name-main-menu li{
+.region-sidebar-first .menu-name-main-menu li{
 	border-bottom: 1px solid rgb(255, 195, 68);
 	padding: 10px;
 	position: relative;
