--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -1,4 +1,4 @@
- #site-name {
+#site-name {
 	float:left;
 	a {
 		font-family: inherit;
@@ -8,6 +8,17 @@
 #content {
 	color: #150517; 
 }
+
+#footer-panels-wrapper{
+	.region.region-three-33-first{
+		width: 66.6666%;
+	}
+	.region.region-three-33-third{
+		float:right;
+	}
+}
+
+//Menu Block for Info for FO Staff page
 
 .region-sidebar-first .menu-name-main-menu li{
 	border-bottom: 1px solid rgb(255, 195, 68);
@@ -24,11 +35,8 @@
     }
 }
 
-#footer-panels-wrapper{
-	.region.region-three-33-first{
-		width: 66.6666%;
-	}
-	.region.region-three-33-third{
-		float:right;
-	}
+//Fix for header nav on GAO
+
+.site-name-grant-accounting-office #branding {
+	width: inherit;
 }
