--- a/sass/global.nav.scss
+++ b/sass/global.nav.scss
@@ -223,6 +223,7 @@ ul.menu {
     &.expanded,
     &.leaf {
       .region-header & {
+        list-style-type: none;
         list-style-image: none;
         list-style-position: outside;
         padding-right: 10px;
